--- a/app/src/main/res/layout/activity_group_chat.xml
+++ b/app/src/main/res/layout/activity_group_chat.xml
@@ -64,8 +64,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbarg"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/adView3" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/messageCard"
@@ -156,6 +155,16 @@
         app:layout_constraintBottom_toBottomOf="@+id/toolbarg"
         app:layout_constraintEnd_toStartOf="@+id/deleteIcong"
         app:layout_constraintTop_toTopOf="@+id/toolbarg" />
+
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:adSize="SMART_BANNER"
+        app:adUnitId="ca-app-pub-3940256099942544/2934735716"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbarg" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
