--- a/app/src/main/res/layout/fragment_group.xml
+++ b/app/src/main/res/layout/fragment_group.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/backGround"
+    android:tag="groupfragment"
     tools:context=".Fragments.groupFragment">
 
     <androidx.recyclerview.widget.RecyclerView
