--- a/app/src/main/res/layout/activity_group_name.xml
+++ b/app/src/main/res/layout/activity_group_name.xml
@@ -71,4 +71,30 @@
         app:layout_constraintStart_toStartOf="@+id/editGroupName"
         app:layout_constraintTop_toBottomOf="@+id/groupIcon"
         app:layout_constraintVertical_bias="0.0" />
+
+
+    <Spinner
+        android:layout_marginTop="10dp"
+        android:id="@+id/spinner"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:elevation="10dp"
+        android:gravity="center"
+        android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView23" />
+
+    <TextView
+        android:id="@+id/textView23"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:text="Group Type"
+        android:textColor="@color/colorAccent"
+        android:textSize="22dp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editGroupDescription" />
 </androidx.constraintlayout.widget.ConstraintLayout>
