--- a/app/src/main/res/layout/activity_send_request_to_join_group.xml
+++ b/app/src/main/res/layout/activity_send_request_to_join_group.xml
@@ -65,7 +65,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/btn_background"
-                android:text="request user"
+                android:text="Join"
+                android:textSize="24dp"
                 android:shadowColor="@color/colorAccent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
