--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -22,5 +22,8 @@
     <item
         android:id="@+id/loguotmenu"
         android:title="@string/logout" />
+    <item
+        android:id="@+id/aboutus"
+        android:title="About Us"/>
 
 </menu>
