--- a/app/src/main/res/layout/right_file_group_adapter.xml
+++ b/app/src/main/res/layout/right_file_group_adapter.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/background"
-    android:background="@color/backGround">
+    android:id="@+id/background">
 
     <ImageView
         android:id="@+id/imageView3g"
@@ -15,7 +14,6 @@
         android:layout_marginTop="5sp"
         android:layout_marginRight="50sp"
         android:layout_marginBottom="5sp"
-        android:background="@color/backGround"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
