--- a/app/src/main/res/layout/activity_group_chat.xml
+++ b/app/src/main/res/layout/activity_group_chat.xml
@@ -55,18 +55,32 @@
         app:layout_constraintVertical_bias="0.437" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:elevation="1dp"
         android:id="@+id/chatPageMessageList"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginHorizontal="2dp"
-        android:background="@color/backGround"
         app:layout_constraintBottom_toTopOf="@+id/messageCard"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/adView3" />
 
+    <com.airbnb.lottie.LottieAnimationView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/adView3"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        android:scaleType="fitXY"
+        app:lottie_rawRes="@raw/train"/>
+
     <androidx.cardview.widget.CardView
+        android:elevation="10dp"
         android:id="@+id/messageCard"
         android:layout_width="0dp"
         android:layout_marginHorizontal="5dp"
@@ -100,6 +114,7 @@
     </androidx.cardview.widget.CardView>
 
     <ImageView
+        android:elevation="10dp"
         android:id="@+id/sendMSGg"
         android:layout_width="33dp"
         android:layout_height="0dp"
@@ -112,6 +127,7 @@
         app:layout_constraintTop_toTopOf="@+id/imageView2g" />
 
     <ImageView
+        android:elevation="10dp"
         android:id="@+id/imageView2g"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
