--- a/app/src/main/res/layout/left_message_group_adapter.xml
+++ b/app/src/main/res/layout/left_message_group_adapter.xml
@@ -4,59 +4,59 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/background"
-    android:background="@color/backGround"
-    >
+    android:id="@+id/background">
 
-    <ImageView
-        android:id="@+id/imageView3g"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginLeft="50sp"
+    <FrameLayout
+        android:id="@+id/layoutrmag"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="50sp"
         android:layout_marginTop="5sp"
-        android:layout_marginRight="5sp"
-        android:layout_marginBottom="5sp"
-        android:background="@color/backGround"
+        android:layout_marginEnd="5sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@drawable/dark_message_background" />
+        app:layout_constraintVertical_bias="1.0" >
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/imageView3g"
+            android:layout_gravity="end"
+            android:paddingHorizontal="10dp"
+            android:paddingVertical="2dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/dark_message_background">
 
-    <TextView
-        android:id="@+id/timeg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="2dp"
-        android:text="time"
-        android:textColor="#FAF5F5"
-        android:textSize="8sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView3g"
-        app:layout_constraintEnd_toEndOf="@+id/imageView3g"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/showMessageg"
-        app:layout_constraintVertical_bias="1.0" />
+            <TextView
+                android:id="@+id/timeg"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="time-is-long"
+                android:textColor="#000000"
+                android:textSize="8sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1"
+                app:layout_constraintStart_toStartOf="@+id/imageView3g"
+                app:layout_constraintTop_toBottomOf="@+id/showMessageg"
+                tools:ignore="SmallSp" />
 
-    <TextView
-        android:id="@+id/showMessageg"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20sp"
-        android:layout_marginTop="10sp"
-        android:layout_marginRight="20sp"
-        android:layout_marginBottom="10sp"
-        android:text="hello"
-        android:textColor="#000000"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView3g"
-        app:layout_constraintEnd_toEndOf="@+id/imageView3g"
-        app:layout_constraintStart_toStartOf="@+id/imageView3g"
-        app:layout_constraintTop_toTopOf="@+id/imageView3g" />
+            <TextView
+                android:id="@+id/showMessageg"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="hi"
+                android:textColor="#000000"
+                android:textSize="18sp"
+                app:layout_constraintBottom_toBottomOf="@+id/imageView3g"
+                app:layout_constraintEnd_toEndOf="@+id/imageView3g"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="@+id/imageView3g"
+                app:layout_constraintTop_toTopOf="@+id/imageView3g"
+                app:layout_constraintVertical_bias="0.0" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </FrameLayout>
 
     <TextView
         android:id="@+id/textView13"
@@ -66,7 +66,7 @@
         android:layout_marginBottom="3dp"
         android:text="TextView"
         android:textColor="@color/colorPrimaryDark"
-        app:layout_constraintBottom_toTopOf="@+id/imageView3g"
+        app:layout_constraintBottom_toTopOf="@+id/layoutrmag"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.056"
         app:layout_constraintStart_toStartOf="parent"
