--- a/app/src/main/res/layout/right_file_adapter.xml
+++ b/app/src/main/res/layout/right_file_adapter.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/background"
-    android:background="@color/backGround">
+    android:elevation="10dp">
 
     <ImageView
         android:id="@+id/imageView3"
@@ -15,7 +15,6 @@
         android:layout_marginTop="5sp"
         android:layout_marginRight="50sp"
         android:layout_marginBottom="5sp"
-        android:background="@color/backGround"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
